--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
-    "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "lucide-react": "^0.562.0",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^24",
+    "@types/node": "^25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "16.1.1",
     "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
